@@ -6,73 +6,51 @@ import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.repository.ResourceRequestRepository;
 import com.example.demo.repository.UserRepository;
 import com.example.demo.service.ResourceRequestService;
+import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.util.List;
 
+@Service
 public class ResourceRequestServiceImpl implements ResourceRequestService {
 
     private final ResourceRequestRepository requestRepository;
     private final UserRepository userRepository;
 
-   
-    public ResourceRequestServiceImpl(ResourceRequestRepository requestRepository,
-                                      UserRepository userRepository) {
+    public ResourceRequestServiceImpl(ResourceRequestRepository requestRepository, UserRepository userRepository) {
         this.requestRepository = requestRepository;
         this.userRepository = userRepository;
     }
 
     @Override
     public ResourceRequest createRequest(Long userId, ResourceRequest request) {
-        
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found"));
-
-      
-        if (request.getStartTime() == null || request.getEndTime() == null ||
-                !request.getStartTime().isBefore(request.getEndTime())) {
+        if (request.getStartTime().isAfter(request.getEndTime())) {
             throw new IllegalArgumentException("Start time must be before end time");
         }
-
-       
-        if (request.getPurpose() == null || request.getPurpose().trim().isEmpty()) {
+        if (request.getPurpose() == null || request.getPurpose().isBlank()) {
             throw new IllegalArgumentException("Purpose is required");
         }
-
-        
-        if (request.getStatus() == null || request.getStatus().trim().isEmpty()) {
-            request.setStatus("PENDING");
-        }
-
         request.setRequestedBy(user);
-
+        request.setStatus("PENDING");
         return requestRepository.save(request);
     }
 
     @Override
     public List<ResourceRequest> getRequestsByUser(Long userId) {
-       
-        if (!userRepository.existsById(userId)) {
-            throw new ResourceNotFoundException("User not found");
-        }
         return requestRepository.findByRequestedById(userId);
     }
 
     @Override
     public ResourceRequest getRequest(Long id) {
         return requestRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("ResourceRequest not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("Request not found"));
     }
 
     @Override
     public ResourceRequest updateRequestStatus(Long requestId, String status) {
         ResourceRequest request = requestRepository.findById(requestId)
-                .orElseThrow(() -> new ResourceNotFoundException("ResourceRequest not found"));
-
-        if (status == null || (!status.equals("PENDING") && !status.equals("APPROVED") && !status.equals("REJECTED"))) {
-            throw new IllegalArgumentException("Invalid status");
-        }
-
+                .orElseThrow(() -> new ResourceNotFoundException("Request not found"));
         request.setStatus(status);
         return requestRepository.save(request);
     }
